# CSOPESY

./: .gitignore  CMakeLists.txt  README.md
MCO1/: config.txt  main
MCO1 2.0/: config.txt  new.cpp
MCO1 2.0/CLI/: CLI.cpp
MCO1 2.0/Scheduler/: FCFSScheduler.cpp  RRScheduler.cpp
MCO1/CLI/: CLI.cpp  CLI.h
MCO1/Core/: CPUTimer.cpp  CPUTimer.h  Config.cpp  Config.h
MCO1/Scheduler/: BaseScheduler.h  FCFSScheduler.cpp  FCFSScheduler.h  Process.cpp  Process.h  RRScheduler.h
MCO1/Screen/: Screen.cpp  Screen.h  ScreenManager.cpp  ScreenManager.h
MCO2/: CMakeLists.txt  config.txt  csopesy-backing-store.txt  main  main.cpp
MCO2/CLI/: CLI.cpp  CLI.h
MCO2/Core/: CPUTimer.cpp  Config.cpp  Config.h
MCO2/Memory/: MemoryManager.cpp  MemoryManager.h  Page.h  PageTable.cpp  PageTable.h
MCO2/MemoryStamp/: memory_stamp_0.txt  memory_stamp_1.txt  memory_stamp_10.txt  memory_stamp_100.txt  memory_stamp_1000.txt  memory_stamp_1002.txt  memory_stamp_1005.txt  memory_stamp_1006.txt  memory_stamp_1008.txt  memory_stamp_101.txt  memory_stamp_1010.txt  memory_stamp_1011660.txt  memory_stamp_1013.txt  memory_stamp_1014.txt  memory_stamp_1017.txt  memory_stamp_1018.txt  memory_stamp_102.txt  memory_stamp_1020.txt  memory_stamp_1023.txt  memory_stamp_1025.txt  memory_stamp_1027.txt  memory_stamp_1028.txt  memory_stamp_103.txt  memory_stamp_1031.txt  memory_stamp_1032.txt  memory_stamp_1034.txt  memory_stamp_1037.txt  memory_stamp_1038.txt  memory_stamp_104.txt  memory_stamp_1040.txt  memory_stamp_1043.txt  memory_stamp_1045.txt  memory_stamp_1046.txt  memory_stamp_1048.txt  memory_stamp_105.txt  memory_stamp_1051.txt  memory_stamp_1052.txt  memory_stamp_1054.txt  memory_stamp_1056.txt  memory_stamp_1057.txt  (+1063 more)
MCO2/Scheduler/: BaseScheduler.h  FCFSScheduler.cpp  FCFSScheduler.h  OSProcess.cpp  OSProcess.h  RRScheduler.cpp  RRScheduler.h  Scheduler.h  SchedulerFactory.h
MCO2/Screen/: Screen.cpp  ScreenManager.h
MCO2/Utilities/: ReportGenerator.h
Week 10 - First-fit memory allocator with round-robin scheduler/: config.txt  main  main.cpp
Week 10 - First-fit memory allocator with round-robin scheduler/CLI/: CLI.cpp  CLI.h
Week 10 - First-fit memory allocator with round-robin scheduler/Core/: Config.cpp  Config.h
Week 10 - First-fit memory allocator with round-robin scheduler/Memory/: MemoryManager.cpp  MemoryManager.h
Week 10 - First-fit memory allocator with round-robin scheduler/Scheduler/: BaseScheduler.h  FCFSScheduler.cpp  Process.cpp  Process.h  RRScheduler.cpp  RRScheduler.h
Week 10 - First-fit memory allocator with round-robin scheduler/Screen/: ScreenManager.cpp
Week 10 - First-fit memory allocator with round-robin scheduler/Utilities/: ReportGenerator.cpp
Week 2 - OS Emulator Setup/: csopesy_cli  main.cpp  week2.sln  week2.vcxproj  week2.vcxproj.filters
Week 2 - OS Emulator Setup/CLI/: CLI.cpp  CLI.h
Week 2 - OS Emulator Setup/week2/x64/Debug/: vc143.idb  week2.exe.recipe  week2.ilk
Week 2 - OS Emulator Setup/week2/x64/Debug/week2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  week2.lastbuildstate
Week 3 - Designing Console Layouts/: csopesy_cli  main.cpp
Week 3 - Designing Console Layouts/CLI/: CLI.cpp  CLI.h
Week 3 - Designing Console Layouts/Screen/: Screen.cpp  ScreenManager.cpp  ScreenManager.h
Week 4/: CLI.cpp  CLI_API.cpp  NProcess.h  Process.h  main.cpp
Week 6 - FCFS scheduler/: main  main.cpp
Week 6 - FCFS scheduler/CLI/: CLI.cpp  CLI.h
Week 6 - FCFS scheduler/Scheduler/: FCFSScheduler.cpp  FCFSScheduler.h  Process.cpp  Process.h
Week 6 - FCFS scheduler/Screen/: Screen.cpp  Screen.h  ScreenManager.cpp  ScreenManager.h
other MCO2/: CMakeLists.txt  main.cpp
other MCO2/CLI/: CLI.cpp  CLI.h
other MCO2/Config/: Config.cpp  Config.h
other MCO2/Scheduler/: RRScheduler.cpp  SchedulerFactory.cpp
other MCO2/Screen/: Screen.h  ScreenManager.cpp  ScreenManager.h
